// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";
import "pkg/model/common.proto";

message insightDataPoint {
  int64 timestamp = 1;
  float value = 2;
}

enum InsightMetricsKind {
  DEPLOYMENT_FREQUENCY = 0;
  CHANGE_FAILURE_RATE = 1;
  MTTR = 2;
  LEAD_TIME_FOR_CHANGES = 3;
}

enum InsightStep {
  DAILY = 0;
  WEEKLY = 1;
  YEARLY = 2;
}
